[metadata]
name = PyJSG
description = Python JSON Schema Grammar interpreter
long-description = A tool to create Python classes that represent JSON objects defined in JSG
url = https://github.com/hsolbrig/pyjsg
homepage = https://github.com/hsolbrig/pyjsg
author = Harold Solbrig
author-email = solbrig@jhu.edu
license = CC0 1.0 Universal
classifier =
    Development Status :: 3 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Topic :: Software Development :: Code Generators
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

keywords =
    JSG
    Javascript
    Schema
    Python
    Code Generator

[files]
packages =
    pyjsg.jsglib
    pyjsg.parser
    pyjsg.parser_impl


[entry_points]
console_scripts =
    gen-jsonld-context = scripts.generate_parser:main


