[metadata]
name = PyJSG
description = Python JSON Schema Grammar interpreter
long-description = A tool to create Python classes that represent JSON objects defined in JSG
url = https://github.com/hsolbrig/pyjsg
homepage = https://github.com/hsolbrig/pyjsg
author = Harold Solbrig
author-email = solbrig@jhu.edu
license = CC0 1.0 Universal
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

keywords =
    JSG
    Javascript
    Schema
    Python
    Code Generator

[files]
packages =
    pyjsg


[entry_points]
console_scripts =
    generate_parser = pyjsg.parser_impl.generate_python:generate


